[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/SupportScenes/UI/DeathScreen/DeathScreen.gd" type="Script" id=1]
[ext_resource path="res://Resources/Roboto.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/items/items_8x8.png" type="Texture" id=3]
[ext_resource path="res://Assets/ui/halo.png" type="Texture" id=4]
[ext_resource path="res://Assets/characters/characters_8x8.png" type="Texture" id=5]
[ext_resource path="res://Scenes/SupportScenes/PlayerCharacter/ColorGear.gd" type="Script" id=6]
[ext_resource path="res://Resources/Renderer.tres" type="Material" id=7]
[ext_resource path="res://Assets/ui/square_background.png" type="Texture" id=9]
[ext_resource path="res://Assets/ui/black_gradient.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 50, 230, 10, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 230, 10, 10 )

[sub_resource type="DynamicFont" id=9]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="DeathScreen" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.54902 )
anchor_bottom = 1.0
margin_right = 256.0
texture = ExtResource( 10 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.54902 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
texture = ExtResource( 10 )
expand = true
flip_h = true

[node name="ClassesBackground" type="TextureButton" parent="."]
modulate = Color( 0, 0, 0, 0.705882 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -120.0
margin_right = 101.0
margin_bottom = 120.0
rect_min_size = Vector2( 400, 180 )
texture_normal = ExtResource( 9 )
expand = true

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="Container"]
margin_top = 72.0
margin_right = 800.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "WilliamQM"
align = 1

[node name="CharacterContainer" type="TextureRect" parent="Container"]
margin_left = 320.0
margin_top = 104.0
margin_right = 480.0
margin_bottom = 184.0
rect_min_size = Vector2( 160, 80 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Character" type="Sprite" parent="Container/CharacterContainer"]
material = ExtResource( 7 )
position = Vector2( 81.0004, 36.0004 )
scale = Vector2( 7, 7 )
texture = ExtResource( 5 )
hframes = 4
vframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 80, 40 )
script = ExtResource( 6 )

[node name="Halo" type="Sprite" parent="Container/CharacterContainer"]
modulate = Color( 0, 0, 0, 0.482353 )
position = Vector2( 77.0005, 36.0004 )
rotation = 6.28319
scale = Vector2( 0.1, 0.1 )
z_index = -1
texture = ExtResource( 4 )

[node name="ReputationContainer" type="HBoxContainer" parent="Container"]
margin_top = 188.0
margin_right = 800.0
margin_bottom = 223.0
alignment = 1

[node name="Reputation" type="HBoxContainer" parent="Container/ReputationContainer"]
margin_left = 345.0
margin_right = 454.0
margin_bottom = 35.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Container/ReputationContainer/Reputation"]
material = ExtResource( 7 )
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
texture = SubResource( 2 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Container/ReputationContainer/Reputation"]
margin_left = 39.0
margin_top = 3.0
margin_right = 109.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "12000"
align = 1

[node name="Placement" type="HBoxContainer" parent="Container/ReputationContainer"]
visible = false
margin_left = 422.0
margin_right = 491.0
margin_bottom = 35.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Container/ReputationContainer/Placement"]
material = ExtResource( 7 )
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
texture = SubResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Container/ReputationContainer/Placement"]
margin_left = 39.0
margin_top = 3.0
margin_right = 69.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "#1"
align = 1

[node name="HomeButton" type="Button" parent="Container"]
margin_left = 370.0
margin_top = 227.0
margin_right = 430.0
margin_bottom = 287.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 8
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Home"
